fixed footer overflow isse by set the height with 5vh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,7 @@ footer {
   justify-content: center;
   align-items: center;
   background-color: #9d0208;
+  height: 5vh;
 }
 #footer-text {
   color: #faa307;
